manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
  labels:
    svc: identity
spec:
  selector:
    app: identity
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  labels:
    svc: order
spec:
  selector:
    app: order
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
  labels:
    svc: catalog
spec:
  selector:
    app: catalog
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: basket-svc
  labels:
    svc: basket
spec:
  selector:
    app: basket
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
