manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microserv-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /identity(/|$)(.*)
            backend:
              service: 
                name: identity-svc
                port:
                  number: 80
          - pathType: Prefix
            path: /order(/|$)(.*)
            backend:
              service: 
                name: order-svc
                port:
                  number: 80
          - pathType: Prefix
            path: /catalog(/|$)(.*)
            backend:
              service: 
                name: catalog-svc
                port:
                  number: 80
          - pathType: Prefix
            path: /basket(/|$)(.*)
            backend:
              service: 
                name: basket-svc
                port:
                  number: 80
